# classic-libqsearch

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  README.md  THANKS  acinclude.m4  configure.ac  qsearch.m4  qsearch.pc.in
doc/man/: maketree.1  qsearch-config.1
examples/: README.txt
src/: Makefile.am  Makefile.in  improvetree.c  maketree.c  privconf.h.in  privconf.h.in~  qsconfig.c  qsearch-config.c.in  qsearch-fulltree.c  qsearch-maketree.gob  qsearch-neighborlist.c  qsearch-tree-to-dot.c  qsearch-tree.c  qsearch-treemaster.c  qsearch.h
src/qsearch/: clconfig.h  qsearch-fulltree.h  qsearch-neighborlist.h  qsearch-tree.h  qsearch-treemaster.h  qsearch.h
tests/: Makefile  Makefile.am  Makefile.in  check_neighborlist.c  check_qsearch.c  check_tree.c  check_treemaster.c
